rework html and css to solve issue of not all reviews displaying on smaller devices

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,25 +1,20 @@
-main {
+body {
     background-image: url(https://res.cloudinary.com/adamboley/image/upload/v1661792894/bg2_oq8m1s.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
-    -o-background-size: cover;
+    -o-background-size: cover;   
+}
+
+main {
     display: flex;
     align-items: center;
     justify-content: center;
     position: relative;
-}
-
-.opaque-overlay {
-    position: absolute;
-    top: 0;
-    left: 0;
-    height: 100%;
-    width: 100%;
     background-color: rgba(0, 0, 0, 0.5);
-    z-index: 0;
+    min-height: 100vh;
 }
 
 .navbar, .navbar-expand-lg {
